--- a/wsb-jpa1/pom.xml
+++ b/wsb-jpa1/pom.xml
@@ -77,8 +77,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<includes>
+						<include>src/main/test/com/capgemini/wsb/service/PatientServiceTest.java</include>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+
+
+
 
 
 </project>
