--- a/wsb-jpa1/src/main/resources/application.properties
+++ b/wsb-jpa1/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.tool.hbm2ddl=debug
+
+# Ustawienie strategii nazewnictwa kolumn
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
